--- a/css/demo.css
+++ b/css/demo.css
@@ -86,7 +86,7 @@ a:focus {
 	font-variant: normal;
 	line-height: 1;
 	text-transform: none;
-	speak: none;
+	speak-as: none;
 	-webkit-font-smoothing: antialiased;
 }
 
